add_compile_definitions(
  _USRDLL
  F4SE_EXPORTS
  RUNTIME
  RUNTIME_VERSION=${F4SE_RUNTIME_VERSION_HEX}
)

set( HEADERS
  bhkWorld.h
  BSCollision.h
  BSGeometry.h
  BSGraphics.h
  BSLight.h
  BSModelDB.h
  BSParticleShaderEmitter.h
  BSSkin.h
  CustomMenu.h
  GameAPI.h
  GameCamera.h
  GameCustomization.h
  GameData.h
  GameEvents.h
  GameExtraData.h
  GameFormComponents.h
  GameForms.h
  GameInput.h
  GameMemory.h
  GameMenus.h
  GameMessages.h
  GameObjects.h
  GameReferences.h
  GameRTTI.h
  GameSettings.h
  GameStreams.h
  GameThreads.h
  GameTypes.h
  GameUtilities.h
  GameWorkshop.h
  Hooks_Camera.h
  Hooks_Debug.h
  Hooks_GameData.h
  Hooks_Gameplay.h
  Hooks_Input.h
  Hooks_Memory.h
  Hooks_ObScript.h
  Hooks_Papyrus.h
  Hooks_SaveLoad.h
  Hooks_Scaleform.h
  Hooks_Threads.h
  InputMap.h
  InternalSerialization.h
  NiCloningProcess.h
  NiExtraData.h
  NiMaterials.h
  NiNodes.h
  NiObjects.h
  NiProperties.h
  NiRTTI.h
  NiSerialization.h
  NiTextures.h
  NiTypes.h
  ObScript.h
  PapyrusActor.h
  PapyrusActorBase.h
  PapyrusArgs.h
  PapyrusArmor.h
  PapyrusArmorAddon.h
  PapyrusCell.h
  PapyrusComponent.h
  PapyrusConstructibleObject.h
  PapyrusDefaultObject.h
  PapyrusDelayFunctors.h
  PapyrusEncounterZone.h
  PapyrusEquipSlot.h
  PapyrusEvents.h
  PapyrusF4SE.h
  PapyrusFavoritesManager.h
  PapyrusForm.h
  PapyrusGame.h
  PapyrusHeadPart.h
  PapyrusInput.h
  PapyrusInstanceData.h
  PapyrusInterfaces.h
  PapyrusLocation.h
  PapyrusMaterialSwap.h
  PapyrusMath.h
  PapyrusMiscObject.h
  PapyrusNativeFunctions.h
  PapyrusObjectMod.h
  PapyrusObjectReference.h
  PapyrusObjects.h
  PapyrusPerk.h
  PapyrusScaleformAdapter.h
  PapyrusScriptObject.h
  PapyrusSerialization.h
  PapyrusStruct.h
  PapyrusUI.h
  PapyrusUtilities.h
  PapyrusUtility.h
  PapyrusValue.h
  PapyrusVM.h
  PapyrusWaterType.h
  PapyrusWeapon.h
  PluginAPI.h
  PluginManager.h
  ScaleformAPI.h
  ScaleformCallbacks.h
  ScaleformLoader.h
  ScaleformMovie.h
  ScaleformSerialization.h
  ScaleformState.h
  ScaleformTranslator.h
  ScaleformTypes.h
  ScaleformValue.h
  Serialization.h
  Translation.h
  )

set( SOURCES
  bhkWorld.cpp
  BSCollision.cpp
  BSGeometry.cpp
  BSGraphics.cpp
  BSLight.cpp
  BSModelDB.cpp
  BSParticleShaderEmitter.cpp
  BSSkin.cpp
  CustomMenu.cpp
  GameAPI.cpp
  GameCamera.cpp
  GameCustomization.cpp
  GameData.cpp
  GameEvents.cpp
  GameExtraData.cpp
  GameFormComponents.cpp
  GameForms.cpp
  GameInput.cpp
  GameMemory.cpp
  GameMenus.cpp
  GameMessages.cpp
  GameObjects.cpp
  GameReferences.cpp
  GameRTTI.cpp
  GameSettings.cpp
  GameStreams.cpp
  GameThreads.cpp
  GameTypes.cpp
  GameUtilities.cpp
  GameWorkshop.cpp
  Hooks_Camera.cpp
  Hooks_Debug.cpp
  Hooks_GameData.cpp
  Hooks_Gameplay.cpp
  Hooks_Input.cpp
  Hooks_Memory.cpp
  Hooks_ObScript.cpp
  Hooks_Papyrus.cpp
  Hooks_SaveLoad.cpp
  Hooks_Scaleform.cpp
  Hooks_Threads.cpp
  InputMap.cpp
  InternalSerialization.cpp
  NiExtraData.cpp
  NiMaterials.cpp
  NiNodes.cpp
  NiObjects.cpp
  NiProperties.cpp
  NiRTTI.cpp
  NiSerialization.cpp
  NiTextures.cpp
  NiTypes.cpp
  ObScript.cpp
  PapyrusActor.cpp
  PapyrusActorBase.cpp
  PapyrusArgs.cpp
  PapyrusArmor.cpp
  PapyrusArmorAddon.cpp
  PapyrusCell.cpp
  PapyrusComponent.cpp
  PapyrusConstructibleObject.cpp
  PapyrusDefaultObject.cpp
  PapyrusDelayFunctors.cpp
  PapyrusEncounterZone.cpp
  PapyrusEquipSlot.cpp
  PapyrusEvents.cpp
  PapyrusF4SE.cpp
  PapyrusFavoritesManager.cpp
  PapyrusForm.cpp
  PapyrusGame.cpp
  PapyrusHeadPart.cpp
  PapyrusInput.cpp
  PapyrusInstanceData.cpp
  PapyrusInterfaces.cpp
  PapyrusLocation.cpp
  PapyrusMaterialSwap.cpp
  PapyrusMath.cpp
  PapyrusMiscObject.cpp
  PapyrusNativeFunctions.cpp
  PapyrusObjectMod.cpp
  PapyrusObjectReference.cpp
  PapyrusObjects.cpp
  PapyrusPerk.cpp
  PapyrusScaleformAdapter.cpp
  PapyrusScriptObject.cpp
  PapyrusSerialization.cpp
  PapyrusStruct.cpp
  PapyrusUI.cpp
  PapyrusUtilities.cpp
  PapyrusUtility.cpp
  PapyrusValue.cpp
  PapyrusVM.cpp
  PapyrusWaterType.cpp
  PapyrusWeapon.cpp
  PluginManager.cpp
  ScaleformAPI.cpp
  ScaleformCallbacks.cpp
  ScaleformLoader.cpp
  ScaleformMovie.cpp
  ScaleformSerialization.cpp
  ScaleformState.cpp
  ScaleformTranslator.cpp
  ScaleformTypes.cpp
  ScaleformValue.cpp
  Serialization.cpp
  Translation.cpp
)  

add_library(f4se_internal STATIC ${HEADERS} ${SOURCES})

install(TARGETS f4se_internal DESTINATION "${F4SE_INSTALL_DIR}/dev/lib" )
install(FILES ${HEADERS} DESTINATION "${F4SE_INSTALL_DIR}/dev/include/f4se" )

add_library(f4se_dll SHARED
  ../f4se_common/f4se_version.rc
  f4se.cpp
)

set_target_properties(f4se_dll PROPERTIES
  OUTPUT_NAME f4se_${F4SE_RUNTIME_VERSION_TAG})

target_link_libraries(f4se_dll f4se_common f4se_internal)

install(TARGETS f4se_dll DESTINATION "${F4SE_INSTALL_DIR}" )
